# nwisretrieval

./: .gitignore  README.md  pyproject.toml
caaqretrieval/: caaqretrieval.py
nwisretrieval/: inherit.py  nwis.py  nwisretrieval.py  nwisretrieval2.py  nwisretrieval3.py  nwisretrieval4.py  register.py  register2.py  schema_nwis_ts.py
qwpretrieval/: qwpretreival.py
tests/: test_nwisretrieval.py  test_nwisretrieval_deprecated.py
tests/test_data/: get_nwis_site=12340500_service=dv_parameterCd=00060_startDT=20230101_endDt=20230401_format=json.json
